RASS-1343 don't show offence outcome in remand to sentencing (#1044)
* RASS-1343 don't show offence outcome in remand to sentencing

* changes

* fixes

* fix

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -41,10 +41,12 @@
                     key: {
                         text: "Outcome"
                     }, value: {
+                        html: '<a href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + chargeUuid + '/update-offence-outcome?submitToEditOffence=true" data-qa="update-outcome-cta">Update outcome</a>'
+                    } if showOutcomeCta else {
                         text: outcome | outcomeValueOrLegacy(offence.legacyData)
                     },
                     actions: {
-                        items: [{
+                        items: [] if showOutcomeCta else [{
                             href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + chargeUuid + "/offence-outcome?submitToEditOffence=true",
                             text: "Edit",
                             visuallyHiddenText: "outcome",
