RASS-942-link class updated for some urls

--- a/server/views/pages/courtAppearance/delete-appearance.njk
+++ b/server/views/pages/courtAppearance/delete-appearance.njk
@@ -34,7 +34,7 @@
                         classes: "govuk-button--warning",
                         attributes: {  'data-qa': 'delete-button' }
                     }) }}
-                    <a class="govuk-link" href="/person/{{nomsId}}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/details">Cancel and go back</a>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/person/{{nomsId}}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/details">Cancel and go back</a>
                 {% endcall %}
             </form>
         </div>
