--- a/server/views/pages/error.njk
+++ b/server/views/pages/error.njk
@@ -26,7 +26,7 @@
             <li>is not in your case load</li>
             <li>has no bookings assigned to them</li>
           </ul>
-          <p class="gouk-body">Check the details in NOMIS and then <a class="govuk-link" href="{{ url }}">try again</a>.</p>
+          <p class="gouk-body">Check the details in NOMIS and then <a class="govuk-link govuk-link--no-visited-state" href="{{ url }}">try again</a>.</p>
         {% elif status === 404 %}
           <p class="govuk-body">If you typed the web address, check it is correct.</p>
 
