--- a/server/views/pages/appearanceUpdatedConfirmation.njk
+++ b/server/views/pages/appearanceUpdatedConfirmation.njk
@@ -17,18 +17,18 @@
             <div class="govuk-!-margin-top-6">
                 <h2 class="govuk-heading-l">What you can do next</h2>
                     <div class="govuk-body govuk-!-margin-top-6">
-                        <a class="govuk-link" href="/person/{{ nomsId }}/view-court-case/{{ courtCaseReference }}/details">Go back to court case{{' ' + latestAppearance.courtCaseReference if latestAppearance.courtCaseReference}} at {{ courtDetails.courtName }}</a>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/person/{{ nomsId }}/view-court-case/{{ courtCaseReference }}/details">Go back to court case{{' ' + latestAppearance.courtCaseReference if latestAppearance.courtCaseReference}} at {{ courtDetails.courtName }}</a>
                     </div>
                 <div class="govuk-body govuk-!-margin-top-6">
                     <span>You can also go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
                     <ul class="govuk-list govuk-!-margin-top-2">
-                        <li><a class="govuk-link" href="/person/{{ nomsId }}">Court case information</a></li>
-                        <li><a class="govuk-link" href="{{ digitalPrisonServicesUrl }}/prisoner/{{ nomsId }}">Prisoner
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/person/{{ nomsId }}">Court case information</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="{{ digitalPrisonServicesUrl }}/prisoner/{{ nomsId }}">Prisoner
                                 profile</a></li>
                     </ul>
                 </div>
                 <div class="govuk-!-margin-top-6">
-                    <p class="govuk-body">Or, go to the <a class="govuk-link" href="{{ digitalPrisonServicesUrl }}"> DPS
+                    <p class="govuk-body">Or, go to the <a class="govuk-link govuk-link--no-visited-state" href="{{ digitalPrisonServicesUrl }}"> DPS
                             homepage</a>.</p>
                 </div>
             </div>
