--- a/server/views/pages/courtAppearance/confirmation.njk
+++ b/server/views/pages/courtAppearance/confirmation.njk
@@ -19,13 +19,13 @@
                 <div class="govuk-body govuk-!-margin-top-6">
                     <span>You can go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
                     <ul class="govuk-list govuk-!-margin-top-2">
-                        <li><a class="govuk-link" href="/person/{{ nomsId }}">Court case information</a></li>
-                        <li><a class="govuk-link" href="{{ digitalPrisonServicesUrl }}/prisoner/{{ nomsId }}">Prisoner
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/person/{{ nomsId }}">Court case information</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="{{ digitalPrisonServicesUrl }}/prisoner/{{ nomsId }}">Prisoner
                                 profile</a></li>
                     </ul>
                 </div>
                 <div class="govuk-!-margin-top-6">
-                    <p class="govuk-body">Or, go to the <a class="govuk-link" href="{{ digitalPrisonServicesUrl }}"> DPS
+                    <p class="govuk-body">Or, go to the <a class="govuk-link govuk-link--no-visited-state" href="{{ digitalPrisonServicesUrl }}"> DPS
                             homepage</a>.</p>
                 </div>
             </div>
