--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -59,7 +59,7 @@
                         classes: "govuk-button--warning",
                         attributes: {  'data-qa': 'delete-button' }
                     }) }}
-                    <a class="govuk-link" href="{{ cancelLink }}">Cancel and go back</a>
+                    <a class="govuk-link govuk-link--no-visited-state" href="{{ cancelLink }}">Cancel and go back</a>
                 {% endcall %}
             </form>
         </div>
