--- a/server/views/pages/overallSentencing/overall-sentence-length.njk
+++ b/server/views/pages/overallSentencing/overall-sentence-length.njk
@@ -40,7 +40,7 @@
             }]
     }) }}
     <p class="govuk-body govuk-!-margin-top-2">
-        <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/alternative-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">The
+        <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/alternative-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}" class="govuk-link govuk-link--no-visited-state">The
             sentence length is formatted differently</a>
     </p>
 {% endset %}
