--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -27,13 +27,13 @@
                                 {% if sortBy === 'APPEARANCE_DATE_DESC' %}
                                     Most recent
                                 {% else %}
-                                    <a href="/person/{{nomsId}}?sortBy=APPEARANCE_DATE_DESC">Most recent</a>
+                                    <a href="/person/{{nomsId}}?sortBy=APPEARANCE_DATE_DESC" class="govuk-link govuk-link--no-visited-state">Most recent</a>
                                 {% endif %}
                                 <span class="seperator">|</span>
                                 {% if sortBy === 'APPEARANCE_DATE_ASC'%}
                                     Earliest
                                 {% else %}
-                                    <a href="/person/{{nomsId}}?sortBy=APPEARANCE_DATE_ASC">Earliest</a>
+                                    <a href="/person/{{nomsId}}?sortBy=APPEARANCE_DATE_ASC" class="govuk-link govuk-link--no-visited-state">Earliest</a>
                                 {% endif %}
 
                             </span>
@@ -280,7 +280,7 @@
             <div class="actions-list">
                 <ul class="govuk-list actions-list-list">
                     <span class="govuk-heading-m actions-list-header">Actions</span>
-                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/add-court-appearance/{{ appearanceUuid }}/new-journey">Add a new court case</a></li>
+                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/add-court-appearance/{{ appearanceUuid }}/new-journey" class="govuk-link govuk-link--no-visited-state">Add a new court case</a></li>
                 </ul>
             </div>
         </div>
