--- a/server/views/pages/sentenceTypes/detail.njk
+++ b/server/views/pages/sentenceTypes/detail.njk
@@ -57,7 +57,7 @@
         </div>
    {% endif %}
 
-    <a href="/sentence-types/legacy" class="govuk-back-link govuk-!-margin-top-7" class="govuk-link govuk-link--no-visited-state">Back to legacy sentence types</a>
+    <a href="/sentence-types/legacy" class="govuk-back-link govuk-!-margin-top-7">Back to legacy sentence types</a>
 
 {% endblock %}
 
