--- a/server/views/pages/sentenceTypes/legacy.njk
+++ b/server/views/pages/sentenceTypes/legacy.njk
@@ -90,7 +90,7 @@
                         <button type="submit" class="govuk-button govuk-!-margin-top-0">Apply filters</button>
 
                         {% if query.active or query.indeterminate or query.recall %}
-                        <a href="/sentence-types/legacy" class="govuk-button govuk-button--secondary govuk-!-margin-top-0" class="govuk-link govuk-link--no-visited-state">Clear filters</a>
+                        <a href="/sentence-types/legacy" class="govuk-button govuk-button--secondary govuk-!-margin-top-0">Clear filters</a>
                         {%  endif %}
                     </div>
 
