--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -55,18 +55,7 @@
 
                     {% if (offences | length > 0) and not hideOffences %}
                         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-                        <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
-                        {{ govukSummaryList({
-                            classes: "govuk-summary-list--no-border offences-summary-card-content",
-                            rows: [
-                                {
-                                    key: { text: "Offences added" },
-                                    value: { text: offences | length },
-                                    classes: "offences-summary-card-offence-details-row"
-                                }
-                            ],
-                            attributes: { 'data-qa': 'offences-summary-card' }
-                        }) }}
+                        <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences ({{offences | length}})</h2>
                         {{ govukDetails({
                             summaryText: "Show offences",
                             html: offenceDetailHtml
