--- a/server/views/pages/sentenceTypes/legacy.njk
+++ b/server/views/pages/sentenceTypes/legacy.njk
@@ -123,7 +123,7 @@
 
                 <td class="govuk-table__cell">
                     <a href="/sentence-types/legacy/detail?nomisSentenceTypeReference={{ sentence.nomisSentenceTypeReference | urlencode }}"
-                       class="govuk-link">View details</a>
+                       class="govuk-link govuk-link--no-visited-state">View details</a>
                 </td>
             </tr>
         {% endfor %}
