--- a/server/views/partials/prisonerBannerBackLayout.njk
+++ b/server/views/partials/prisonerBannerBackLayout.njk
@@ -12,6 +12,6 @@
                     }) }}
                 </div>
             {% endif %}
-            <div class="{{'govuk-grid-column-one-half' if backLink.length else 'govuk-grid-column-full'}} govuk-!-text-align-right"><a href="/person/{{ nomsId }}" class="govuk-link govuk-body-s">Go to Court cases</a></div>
+            <div class="{{'govuk-grid-column-one-half' if backLink.length else 'govuk-grid-column-full'}} govuk-!-text-align-right"><a href="/person/{{ nomsId }}" class="govuk-link govuk-link--no-visited-state govuk-body-s">Go to Court cases</a></div>
         </div>
 {% endblock %}
