--- a/server/views/pages/sentencing/first-sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/first-sentence-consecutive-to.njk
@@ -15,19 +15,16 @@
                 {% include "../../partials/offenceCaption.njk" %}
                 <div class="govuk-form-group {%- if errorMessage %} govuk-form-group--error{% endif %}">
                     {% call govukFieldset({
-                        describedBy: "consecutiveToSentenceUuid-hint" + (" consecutiveToSentenceUuid-error" if errorMessage else ""),
+                        describedBy: "consecutiveToSentenceUuid-error" if errorMessage else "",
                         legend: {
-                            text: "Which sentence is this sentence consecutive to?",
+                            text: "Select the sentence this is consecutive to",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
                     }) %}
-                     {{
-                        govukHint({
-                            id: 'consecutiveToSentenceUuid-hint',
-                            text: offenceDetails.code + " " + offenceDetails.description + (" committed on " + offence.offenceStartDate | formatDate + (" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate else "") if offence.offenceStartDate)
-                        })
-                    }}
+                    
+                    <p class="govuk-body-l">{{offenceDetails.code}} {{offenceDetails.description}}{% if offence.offenceStartDate%} committed on {{ offence.offenceStartDate | formatDate }}{%if offence.offenceEndDate %} to {{offence.offenceEndDate | formatDate}}{% endif %}{% endif %}</p>
+
                     {% if errorMessage %}
                         {{ govukErrorMessage({
                             id: "consecutiveToSentenceUuid-error",
