--- a/server/views/pages/sentencing/upload-court-documents.njk
+++ b/server/views/pages/sentencing/upload-court-documents.njk
@@ -47,7 +47,7 @@
                       items: [
                         {
                           href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/" + foundDoc.documentUUID + "/delete-document",
-                          text: "Delete",
+                          text: "Remove",
                           visuallyHiddenText: "document"
                         }
                       ]
