--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -193,8 +193,9 @@
                                         {% endset %}
 
                                         {{ govukDetails({
-                                            summaryText: "Show offences (" + (courtCaseDetails.showingChargeTotal + " of " if courtCaseDetails.showingChargeTotal else "") + courtCaseDetails.chargeTotal + ")",
+                                            summaryText: "offences (" + (courtCaseDetails.showingChargeTotal + " of " if courtCaseDetails.showingChargeTotal else "") + courtCaseDetails.chargeTotal + ")",
                                             html: offenceDetailsHtml,
+                                            classes: "filter show-toggle govuk-!-margin-bottom-0",
                                                 attributes: {
                                                     "data-qa": "courtCaseDetailsComponent-" + courtCaseDetails.courtCaseUuid
                                                 }
