--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -66,3 +66,32 @@
   }
 }
 
+.filter.govuk-details > .govuk-details__summary::before {
+  border-style: solid;
+  border-width: 2px 2px 0 0;
+  content: "";
+  display: inline-block;
+  height: 10px;
+  position: relative;
+  vertical-align: middle;
+  width: 10px;
+  border-color: initial;
+  clip-path: unset;
+  padding-left: 0 !important;
+  -webkit-transform: translateY(-25%) rotate(135deg) scale(1);
+  -ms-transform: translateY(-25%) rotate(135deg) scale(1);
+  transform: translateY(-25%) rotate(135deg) scale(1);
+  margin-right: 5px;
+}
+
+.filter.govuk-details > .govuk-details__summary {
+  padding-left: 0;
+}
+
+.show-toggle.govuk-details > .govuk-details__summary > .govuk-details__summary-text::before {
+  content: "Show ";
+}
+
+.show-toggle.govuk-details[open] > .govuk-details__summary > .govuk-details__summary-text::before {
+  content: "Hide ";
+}
