--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -57,7 +57,8 @@
                         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                         <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences ({{offences | length}})</h2>
                         {{ govukDetails({
-                            summaryText: "Show offences",
+                            summaryText: "offences",
+                            classes: "filter white show-toggle govuk-!-margin-bottom-0",
                             html: offenceDetailHtml
                         }) }}
                     {% endif %}
