RASS-1337 stling changes for expandable-offences section (change chevron)

--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -186,7 +186,7 @@
             {% endfor %}
             {% endset %}
             {{ govukDetails({
-                summaryText: '(' + appearance.charges | length  + ')',
+                summaryText: 'offences (' + appearance.charges | length  + ')',
                 html: offenceDetailsHtml,
                 classes: "filter white show-toggle govuk-!-margin-bottom-0",
                 attributes: {
