--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -66,48 +66,41 @@
   }
 }
 
-.filter.govuk-details[open] > .govuk-details__summary::before {
-  border-style: solid;
-  border-width: 2px 2px 0 0;
+/* base style for chevron (arrow) */
+.filter.govuk-details > .govuk-details__summary::before {
   content: "";
   display: inline-block;
+  width: 10px;
   height: 10px;
+  margin-right: 5px;
   position: relative;
   vertical-align: middle;
-  width: 10px;
+  border: 2px solid;
+  border-width: 2px 2px 0 0;
   border-color: initial;
   clip-path: unset;
-  -webkit-transform: translateY(30%) rotate(-45deg) scale(1);
-  -ms-transform: translateY(30%) rotate(-45deg) scale(1);
-  transform: translateY(30%) rotate(-45deg) scale(1);
-  margin-right: 5px;
 }
 
+/* Chevron direction when closed */
 .filter.govuk-details > .govuk-details__summary::before {
-  border-style: solid;
-  border-width: 2px 2px 0 0;
-  content: "";
-  display: inline-block;
-  height: 10px;
-  position: relative;
-  vertical-align: middle;
-  width: 10px;
-  border-color: initial;
-  clip-path: unset;
-  -webkit-transform: translateY(-25%) rotate(135deg) scale(1);
-  -ms-transform: translateY(-25%) rotate(135deg) scale(1);
-  transform: translateY(-25%) rotate(135deg) scale(1);
-  margin-right: 5px;
+  transform: translateY(-25%) rotate(135deg);
+}
+
+/* Chevron direction when open */
+.filter.govuk-details[open] > .govuk-details__summary::before {
+  transform: translateY(30%) rotate(-45deg);
 }
 
 .filter.govuk-details > .govuk-details__summary {
   padding-left: 0;
 }
 
+/* Toggle text when closed */
 .show-toggle.govuk-details > .govuk-details__summary > .govuk-details__summary-text::before {
   content: "Show ";
 }
 
+/* Toggle text when open */
 .show-toggle.govuk-details[open] > .govuk-details__summary > .govuk-details__summary-text::before {
   content: "Hide ";
 }
