--- a/server/views/pages/documents.njk
+++ b/server/views/pages/documents.njk
@@ -1,10 +1,13 @@
 {% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
+{% from "hmpps/components/court-cases-release-dates/things-to-do/macro.njk" import thingsToDo %}
 
 {% set pageTitle = applicationName + " - Documents" %}
 
 {% block content %}
     <h1 class="govuk-heading-xl">Court cases documents</h1>
+    
+    {{ thingsToDo(serviceDefinitions, 'courtCases') }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             {% for courtCase in courtCases %}
